tests/fixtures/errors/unknown_const_ref.ksr
// Unknown constant reference: UNKNOWN is never declared
node x = UNKNOWN + 1.0;
